<resources>
    <string name="app_name">My Application</string>
    <string name="log_in">LOG IN</string>
    <string name="single_player">Single player</string>
    <string name="local_game">local game</string>
    <string name="your_nickname">Your nickname</string>
    <string name="game_on_one_device">game on one device</string>
    <string name="todo">TODO</string>
    <string name="helloUser">Hello %1d</string>
    <string name="this_is_image_background">This is image background</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="tie">Tie</string>
    <string name="restart">restart</string>
    <string name="back_to_global_page">back to global page</string>
    <string name="create_room">Create Room</string>
    <string name="change_nickname">change nickname</string>
    <string name="back">Back</string>
    <string name="hard">Hard</string>
    <string name="normal">Normal</string>
    <string name="easy">Easy</string>
    <string name="select_difficulty">Select difficulty</string>
    <string name="give_result">Give result</string>
    <string name="back_to_game_type_selection">Back to Game type selection</string>
</resources>