<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">



    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/global_bg"
        android:contentDescription="@string/this_is_image_background" />

    <TextView
        android:id="@+id/playerOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/player_1"
        android:textSize="30sp"
        android:padding="30dp"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/playerTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/player_2"
        android:textSize="25sp"
        android:gravity="right"
        android:padding="30dp"
        android:textColor="#424242"
        tools:ignore="RtlHardcoded" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fieldRv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        tools:listitem="@layout/field_cell"/>

    <RelativeLayout
        android:id="@+id/endBlock"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99ffffff"
        android:visibility="gone"
        android:layout_gravity="center">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:layout_marginEnd="50dp"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/winnerTextView"
                android:textSize="30sp"
                android:textColor="@color/black"
                android:gravity="center"
                android:layout_marginBottom="25dp"
                android:text="@string/tie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/restart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/restart"/>
            <Button
                android:id="@+id/back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/back_to_global_page"/>
        </LinearLayout>



    </RelativeLayout>
</FrameLayout>
