<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/this_is_image_background"
        android:scaleType="centerCrop"
        android:src="@drawable/global_bg" />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="@string/helloUser"
        android:textColor="@color/black"
        android:textSize="40sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fieldRv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        tools:listitem="@layout/field_cell" />

    <RelativeLayout
        android:id="@+id/endBlockHard"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="#99ffffff"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="50dp"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/winnerTextViewHard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:gravity="center"
                android:text="@string/tie"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <Button
                android:id="@+id/restartHard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/restart" />

            <Button
                android:id="@+id/backHard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/back_to_game_type_selection" />
        </LinearLayout>

    </RelativeLayout>

</FrameLayout>